@@ -92,7 +92,7 @@ void TTpContr::postEnable( int flag )
 
     //> Controler's bd structure
     fldAdd(new TFld("PRM_BD",_("Parameters table"),TFld::String,TFld::NoFlag,"30",""));
-    fldAdd(new TFld("PERIOD",_("Gather data period (s)"),TFld::Real,TFld::NoFlag,"6.2","1","0.01;100"));	//!!!! Remove at further
+    fldAdd(new TFld("PERIOD",_("Gather data period (s)"),TFld::Integer,TFld::NoFlag,"6.2","1","0.01;100"));	//!!!! Remove at further
     fldAdd(new TFld("SCHEDULE",_("Acquisition schedule"),TFld::String,TFld::NoFlag,"100",""/* "1" */));
     fldAdd(new TFld("PRIOR",_("Gather task priority"),TFld::Integer,TFld::NoFlag,"2","0","-1;99"));
     fldAdd(new TFld("ADDR",_("Serial transport"),TFld::String,TFld::NoFlag,"30",""));
@@ -148,9 +148,9 @@ TController *TTpContr::ContrAttach( const string &name, const string &daq_db )
 //* TMdContr                                           *
 //******************************************************
 TMdContr::TMdContr( string name_c, const string &daq_db, TElem *cfgelem ) :
-    TController(name_c, daq_db, cfgelem), mPer(cfg("PERIOD").getRd()), mPrior(cfg("PRIOR").getId()),
+    TController(name_c, daq_db, cfgelem), mPerOld(cfg("PERIOD").getId()), mPrior(cfg("PRIOR").getId()),
     connTry(cfg("REQ_TRY").getId()), mSched(cfg("SCHEDULE").getSd()), mAddr(cfg("ADDR").getSd()),
-    prc_st(false), call_st(false), endrun_req(false), tm_gath(0)
+    prc_st(false), call_st(false), endrun_req(false), mPer(1e9), tm_gath(0)
 {
     cfg("PRM_BD").setS("DCONPrm_"+name_c);
 }
@@ -188,7 +188,7 @@ void TMdContr::load_( )
     TController::load_( );
 
     //> Check for get old period method value
-    if(mSched.getVal().empty()) mSched = TSYS::real2str(mPer);
+    if(mSched.getVal().empty()) mSched = TSYS::real2str(mPerOld);
 }
 
 void TMdContr::disable_( )
