@@ -1,4 +1,9 @@
 2011-10-14 Roman
+- Security: Users and groups check to removed from DB for remove object is added.
+    Checking for remove performed only at direct selected DB loading.
+- SYS: The function chkSelDB() is adapted for support writing to config-file "<cfg>".
+- FIX:DAQ.DCON, DAQ.System, DAQ.Siemens, DAQ.LogicLev, DAQ.DAQGate, DAQ.BlockCalc:
+    Fix to old period mechanism store into DB field "PERIOD". Direct load and use is prevented.
 - DAQ.Template, DAQ.JavaLikeCalc, UI.VCAEngine, : DB address is addapted to "<cfg>.[tbl]" parse.
 - !!:DB: Time limit at 5s and offset set is added to big table content display.
 - FIX:UI.Vision: Edit area resize and top hold is fixed on geometry change for edited widget.
